test: refactored user task and variable search tests
- using TestHelper methods instead of private test methods
- applying IDE suggestions to simplify `isEqualTo` assertions, joining assertions, removing unused variables