@@ -7,6 +7,8 @@
  */
 package io.camunda.it.client;
 
+import static io.camunda.it.util.TestHelper.deployProcessAndWaitForIt;
+import static io.camunda.it.util.TestHelper.startProcessInstance;
 import static io.camunda.qa.util.multidb.CamundaMultiDBExtension.*;
 import static io.camunda.search.schema.config.IndexConfiguration.DEFAULT_VARIABLE_SIZE_THRESHOLD;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -38,9 +40,12 @@ class VariableSearchTest {
 
   @BeforeAll
   static void beforeAll() {
-    delpoyProcessFromResourcePath("/process/bpm_variable_test.bpmn", "bpm_variable_test.bpmn");
+    final InputStream process =
+        UserTaskSearchTest.class.getResourceAsStream("/process/bpm_variable_test.bpmn");
+    deployProcessAndWaitForIt(
+        camundaClient, Bpmn.readModelFromStream(process), "bpm_variable_test.bpmn");
 
-    startProcessInstance("bpmProcessVariable");
+    startProcessInstance(camundaClient, "bpmProcessVariable", Map.of(LARGE_VAR_NAME, LARGE_VALUE));
 
     waitForTasksBeingExported();
 
@@ -51,7 +56,7 @@ class VariableSearchTest {
             .send()
             .join()
             .items()
-            .get(0);
+            .getFirst();
   }
 
   @Test
@@ -60,7 +65,7 @@ class VariableSearchTest {
     final var result = camundaClient.newVariableSearchRequest().send().join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(6);
+    assertThat(result.items()).hasSize(6);
   }
 
   @Test
@@ -74,8 +79,8 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(1);
-    assertThat(result.items().get(0).getVariableKey()).isEqualTo(variable.getVariableKey());
+    assertThat(result.items()).hasSize(1);
+    assertThat(result.items().getFirst().getVariableKey()).isEqualTo(variable.getVariableKey());
   }
 
   @Test
@@ -89,9 +94,9 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(1);
-    assertThat(result.items().get(0).getVariableKey()).isEqualTo(variable.getVariableKey());
-    assertThat(result.items().get(0).getScopeKey()).isEqualTo(variable.getScopeKey());
+    assertThat(result.items()).hasSize(1);
+    assertThat(result.items().getFirst().getVariableKey()).isEqualTo(variable.getVariableKey());
+    assertThat(result.items().getFirst().getScopeKey()).isEqualTo(variable.getScopeKey());
   }
 
   @Test
@@ -105,7 +110,7 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(2);
+    assertThat(result.items()).hasSize(2);
     assertThat(result.items().stream().allMatch(v -> v.getName().equals(variable.getName())))
         .isTrue();
   }
@@ -151,9 +156,9 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(1);
-    assertThat(result.items().get(0).getVariableKey()).isEqualTo(variable.getVariableKey());
-    assertThat(result.items().get(0).getValue()).isEqualTo(variable.getValue());
+    assertThat(result.items()).hasSize(1);
+    assertThat(result.items().getFirst().getVariableKey()).isEqualTo(variable.getVariableKey());
+    assertThat(result.items().getFirst().getValue()).isEqualTo(variable.getValue());
   }
 
   @Test
@@ -167,7 +172,7 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(1);
+    assertThat(result.items()).hasSize(1);
     final var first = result.items().getFirst();
     assertThat(first.getVariableKey()).isEqualTo(variable.getVariableKey());
     assertThat(first.getValue()).isEqualTo(variable.getValue());
@@ -184,7 +189,7 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(1);
+    assertThat(result.items()).hasSize(1);
     final var first = result.items().getFirst();
     assertThat(first.getVariableKey()).isEqualTo(variable.getVariableKey());
     assertThat(first.getValue()).isEqualTo(variable.getValue());
@@ -201,7 +206,7 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(6);
+    assertThat(result.items()).hasSize(6);
     assertThat(
             result.items().stream()
                 .allMatch(v -> v.getProcessInstanceKey().equals(variable.getProcessInstanceKey())))
@@ -219,7 +224,7 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(6);
+    assertThat(result.items()).hasSize(6);
     assertThat(
             result.items().stream()
                 .allMatch(v -> v.getProcessInstanceKey().equals(variable.getProcessInstanceKey())))
@@ -237,7 +242,7 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(0);
+    assertThat(result.items()).isEmpty();
   }
 
   @Test
@@ -251,7 +256,7 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(6);
+    assertThat(result.items()).hasSize(6);
     assertThat(
             result.items().stream().allMatch(v -> v.getTenantId().equals(variable.getTenantId())))
         .isTrue();
@@ -268,7 +273,7 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(5);
+    assertThat(result.items()).hasSize(5);
     assertThat(result.items().stream().allMatch(Variable::isTruncated)).isFalse();
 
     // when
@@ -276,7 +281,7 @@ class VariableSearchTest {
         camundaClient.newVariableSearchRequest().filter(f -> f.isTruncated(true)).send().join();
 
     // then
-    assertThat(resultTruncatedTrue.items().size()).isEqualTo(1);
+    assertThat(resultTruncatedTrue.items()).hasSize(1);
   }
 
   @Test
@@ -291,20 +296,9 @@ class VariableSearchTest {
             .join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(1);
+    assertThat(result.items()).hasSize(1);
     final var resultVar = result.items().getFirst();
     assertThat(resultVar.isTruncated()).isFalse();
-  }
-
-  private static void delpoyProcessFromResourcePath(
-      final String resource, final String resourceName) {
-    final InputStream process = UserTaskSearchTest.class.getResourceAsStream(resource);
-
-    camundaClient
-        .newDeployResourceCommand()
-        .addProcessModel(Bpmn.readModelFromStream(process), resourceName)
-        .send()
-        .join();
   }
 
   @Test
@@ -314,10 +308,10 @@ class VariableSearchTest {
     final var result =
         camundaClient.newVariableSearchRequest().sort(s -> s.name().asc()).send().join();
 
-    assertThat(result.items().size()).isEqualTo(6);
+    assertThat(result.items()).hasSize(6);
 
     final List<String> names =
-        result.items().stream().map(item -> item.getName()).collect(Collectors.toList());
+        result.items().stream().map(Variable::getName).collect(Collectors.toList());
 
     assertThat(names).isSorted();
   }
@@ -353,10 +347,10 @@ class VariableSearchTest {
         camundaClient.newVariableSearchRequest().sort(s -> s.value().desc()).send().join();
 
     // then
-    assertThat(result.items().size()).isEqualTo(6);
+    assertThat(result.items()).hasSize(6);
 
     final List<String> values =
-        result.items().stream().map(item -> item.getValue()).collect(Collectors.toList());
+        result.items().stream().map(Variable::getValue).collect(Collectors.toList());
 
     assertThat(values).isSortedAccordingTo(Comparator.reverseOrder());
   }
@@ -371,7 +365,7 @@ class VariableSearchTest {
         camundaClient.newVariableSearchRequest().page(p -> p.limit(2).from(2)).send().join();
 
     // then
-    assertThat(resultSearchFrom.items().size()).isEqualTo(2);
+    assertThat(resultSearchFrom.items()).hasSize(2);
     assertThat(resultSearchFrom.items().stream().findFirst().get().getVariableKey())
         .isEqualTo(thirdKey);
   }
@@ -383,20 +377,10 @@ class VariableSearchTest {
         .untilAsserted(
             () -> {
               final var result = camundaClient.newUserTaskSearchRequest().send().join();
-              assertThat(result.items().size()).isEqualTo(2);
+              assertThat(result.items()).hasSize(2);
 
               final var resultVariable = camundaClient.newVariableSearchRequest().send().join();
-              assertThat(resultVariable.items().size()).isEqualTo(6);
+              assertThat(resultVariable.items()).hasSize(6);
             });
-  }
-
-  private static void startProcessInstance(final String processId) {
-    camundaClient
-        .newCreateInstanceCommand()
-        .bpmnProcessId(processId)
-        .latestVersion()
-        .variables(Map.of(LARGE_VAR_NAME, LARGE_VALUE))
-        .send()
-        .join();
   }
 }
